--- a/Weeb/package.json
+++ b/Weeb/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "prettier": "^3.7.4",
     "vite": "^7.2.4"
   }
 }
